Updates to UTK deployment information (#16)
* Revise UTK.md to include all Drupal Modules that have been imported and activated since Sept. 2015.

* Revise UTK.md after Paul reviewed and made suggestions.

* Revise UTK.md to add PHP and drush to software versions, per Paul.